--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-header>    </app-header>
+<app-header />
+
+
+<main>
+    <ul id = "users">
+        <li>
+            <app-user />
+        </li>
+    </ul>
+</main>
 
