--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="assets/task-management-logo.png" alt="A todo list" />
+    <img src="../../assets/task-management-logo.png" alt="A todo list" />
     <div>
         <h1>Easy Task</h1>
         <p>Enterprise-level task management without friction</p>
