--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,7 @@
 <div>
     <button (click)=onSelectedUser() >
         <img
-            [src]="imagePath"
+            [src]="imagePath()"
             [alt]="selectedUser().name"
         />
         <span>{{selectedUser().name}}</span>
