--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,19 +4,39 @@
 <main>
     <ul id = "users">
         <li>
-            <app-user [avatar]="users[0].avatar" [name]="users[0].name" />
+            <app-user [avatar]="users[0].avatar"
+                      [name]="users[0].name"
+                      [id]="users[0].id"
+                      (select)="onSelectUser($event)"
+            />
         </li>
         <li>
-            <app-user [avatar]="users[1].avatar" [name]="users[1].name"  />
+            <app-user [avatar]="users[1].avatar"
+                      [name]="users[1].name"
+                      [id]="users[1].id"
+                      (select)="onSelectUser($event)"
+            />
         </li>
         <li>
-            <app-user [avatar]="users[2].avatar" [name]="users[2].name"  />
+            <app-user [avatar]="users[2].avatar"
+                      [name]="users[2].name"
+                      [id]="users[2].id"
+                      (select)="onSelectUser($event)"
+            />
         </li>
         <li>
-            <app-user [avatar]="users[3].avatar" [name]="users[3].name"  />
+            <app-user [avatar]="users[3].avatar"
+                      [name]="users[3].name"
+                      [id]="users[3].id"
+                      (select)="onSelectUser($event)"
+            />
         </li>
         <li>
-            <app-user [avatar]="users[4].avatar" [name]="users[4].name"  />
+            <app-user [avatar]="users[4].avatar"
+                      [name]="users[4].name"
+                      [id]="users[4].id"
+                      (select)="onSelectUser($event)"
+            />
         </li>
     </ul>
 </main>
