--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,9 +1,9 @@
 <div>
     <button (click)=onSelectedUser() >
         <img
-            [src]="imagePath"
-            [alt]="name"
+            [src]="imagePath()"
+            [alt]="name()"
         />
-        <span>{{name}}</span>
+        <span>{{name()}}</span>
     </button>
 </div>
