--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-header />
-
-
 <main>
     <ul id = "users">
         <li>
@@ -39,5 +37,7 @@
             />
         </li>
     </ul>
+
+    <app-tasks [name]="selectedUser.name" />
 </main>
 
