--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,40 +2,27 @@
 <main>
     <ul id = "users">
         <li>
-            <app-user [avatar]="users[0].avatar"
-                      [name]="users[0].name"
-                      [id]="users[0].id"
+            <app-user [user]="users[0]"
                       (select)="onSelectUser($event)"
             />
         </li>
         <li>
-            <app-user [avatar]="users[1].avatar"
-                      [name]="users[1].name"
-                      [id]="users[1].id"
+            <app-user [user]="users[1]"
                       (select)="onSelectUser($event)"
             />
         </li>
         <li>
-            <app-user [avatar]="users[2].avatar"
-                      [name]="users[2].name"
-                      [id]="users[2].id"
-                      (select)="onSelectUser($event)"
+            <app-user (select)="onSelectUser($event)"
+                      [user]="users[2]"
             />
         </li>
         <li>
-            <app-user [avatar]="users[3].avatar"
-                      [name]="users[3].name"
-                      [id]="users[3].id"
-                      (select)="onSelectUser($event)"
+            <app-user (select)="onSelectUser($event)"
+                      [user]="users[3]"
             />
         </li>
-        <li>
-            <app-user [avatar]="users[4].avatar"
-                      [name]="users[4].name"
-                      [id]="users[4].id"
-                      (select)="onSelectUser($event)"
-            />
-        </li>
+
+
     </ul>
 
     <app-tasks [name]="selectedUser.name" />
