--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,8 +2,8 @@
     <button (click)=onSelectedUser() >
         <img
             [src]="imagePath()"
-            [alt]="name()"
+            [alt]="user().name"
         />
-        <span>{{name()}}</span>
+        <span>{{ user().name }}</span>
     </button>
 </div>
