--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,14 @@
             </li>
         }
     </ul>
-    <app-tasks [name]="selectedUser.name" />
+
+
+    @if (selectedUser) {
+        <app-tasks [userId]="selectedUser.id" [name]="selectedUser.name"/>
+    } @else {
+        <p id="fallback">Select a user to see their tasks!</p>
+    }
+
+
 </main>
 
