--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
         @for (user of users; track user.id) {
             <li>
                 <app-user [user]="user"
+                          [selected]="user.id === selectedUserId"
                           (select)="onSelectUser($event)"
                 />
             </li>
