--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -4,7 +4,7 @@
     <p>{{ task.summary }}</p>
 
     <p class="actions">
-        <button>Complete</button>
+        <button (click)="onCompleteTask()">Complete</button>
     </p>
 
 </article>
